configure import and export in library

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hello-dev",
+  "type": "module",
   "version": "1.0.1",
   "description": "simple hello world package",
   "main": "index.js",
