--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "simple hello world package",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon  index.js",
+    "start": "node -r esm index.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/saroj8455/hello-dev/issues"
   },
-  "homepage": "https://github.com/saroj8455/hello-dev#readme"
+  "homepage": "https://github.com/saroj8455/hello-dev#readme",
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
